--- a/project 1.ipynb
+++ b/project 1.ipynb
@@ -2,22 +2,460 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Segment                   Country                Product   \\\n",
+      "0          Beverages  United States of America                Robusta    \n",
+      "1          Beverages               Switzerland                Robusta    \n",
+      "2             Snacks                     Japan                Robusta    \n",
+      "3             Snacks               Switzerland                Robusta    \n",
+      "4             Snacks                   Belgium                Robusta    \n",
+      "...              ...                       ...                     ...   \n",
+      "1570    Frozen Foods                     Japan                Caturra    \n",
+      "1571    Frozen Foods                   Belgium                Caturra    \n",
+      "1572       Beverages                   Belgium                 Typica    \n",
+      "1573       Beverages  United States of America   Blue Mountain Coffee    \n",
+      "1574  Dairy Products                     China                Arabica    \n",
+      "\n",
+      "      Discount Band   Units Sold  Manufacturing Price   Sale Price   \\\n",
+      "0              None      2427.75                $3.90       $26.00    \n",
+      "1              None      1981.50                $3.90       $26.00    \n",
+      "2              None      3267.00                $3.90       $19.50    \n",
+      "3              None      1332.00                $3.90       $19.50    \n",
+      "4              None      3705.00                $3.90       $19.50    \n",
+      "...              ...         ...                   ...          ...   \n",
+      "1570           High      5197.50              $574.60      $663.00    \n",
+      "1571           High      1146.60              $574.60      $663.00    \n",
+      "1572           High      2872.80               $11.05       $15.47    \n",
+      "1573           High      1518.30               $22.10       $15.47    \n",
+      "1574           High      3792.60              $552.50       $26.52    \n",
+      "\n",
+      "         Gross Sales      Discounts            Sales             COGS   \\\n",
+      "0         $42,081.00           $-         $42,081.00       $21,040.50    \n",
+      "1         $34,346.00           $-         $34,346.00       $17,173.00    \n",
+      "2         $42,471.00           $-         $42,471.00       $28,314.00    \n",
+      "3         $17,316.00           $-         $17,316.00       $11,544.00    \n",
+      "4         $48,165.00           $-         $48,165.00       $32,110.00    \n",
+      "...               ...            ...              ...              ...   \n",
+      "1570   $1,640,925.00    $246,138.75    $1,394,786.25    $1,367,437.50    \n",
+      "1571     $361,998.00     $54,299.70      $307,698.30      $301,665.00    \n",
+      "1572      $21,162.96      $3,174.44       $17,988.52       $15,116.40    \n",
+      "1573      $11,184.81      $1,677.72        $9,507.09        $7,989.15    \n",
+      "1574      $47,895.12      $7,184.27       $40,710.85       $11,973.78    \n",
+      "\n",
+      "           Profit         Date  Month Number  Month Name   Year  \n",
+      "0      $16,185.00   01/01/2021             1     January   2021  \n",
+      "1      $13,210.00   01/01/2021             1     January   2021  \n",
+      "2      $10,890.00   01/06/2021             6        June   2021  \n",
+      "3       $4,440.00   01/06/2021             6        June   2021  \n",
+      "4      $12,350.00   01/06/2021             6        June   2021  \n",
+      "...            ...         ...           ...          ...   ...  \n",
+      "1570   $21,037.50   01/03/2023             3       March   2023  \n",
+      "1571    $4,641.00   01/10/2023            10     October   2023  \n",
+      "1572    $2,209.32   01/02/2023             2    February   2023  \n",
+      "1573    $1,167.65   01/04/2023             4       April   2023  \n",
+      "1574   $22,105.44   01/05/2023             5         May   2023  \n",
+      "\n",
+      "[1575 rows x 16 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Discount Band</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Manufacturing Price</th>\n",
+       "      <th>Sale Price</th>\n",
+       "      <th>Gross Sales</th>\n",
+       "      <th>Discounts</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month Number</th>\n",
+       "      <th>Month Name</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2427.75</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$21,040.50</td>\n",
+       "      <td>$16,185.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1981.50</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$17,173.00</td>\n",
+       "      <td>$13,210.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3267.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$28,314.00</td>\n",
+       "      <td>$10,890.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1332.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$11,544.00</td>\n",
+       "      <td>$4,440.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3705.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$32,110.00</td>\n",
+       "      <td>$12,350.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Segment                   Country    Product Discount Band  Units Sold  \\\n",
+       "0  Beverages  United States of America   Robusta          None      2427.75   \n",
+       "1  Beverages               Switzerland   Robusta          None      1981.50   \n",
+       "2     Snacks                     Japan   Robusta          None      3267.00   \n",
+       "3     Snacks               Switzerland   Robusta          None      1332.00   \n",
+       "4     Snacks                   Belgium   Robusta          None      3705.00   \n",
+       "\n",
+       "  Manufacturing Price Sale Price   Gross Sales Discounts         Sales  \\\n",
+       "0              $3.90     $26.00    $42,081.00      $-      $42,081.00    \n",
+       "1              $3.90     $26.00    $34,346.00      $-      $34,346.00    \n",
+       "2              $3.90     $19.50    $42,471.00      $-      $42,471.00    \n",
+       "3              $3.90     $19.50    $17,316.00      $-      $17,316.00    \n",
+       "4              $3.90     $19.50    $48,165.00      $-      $48,165.00    \n",
+       "\n",
+       "           COGS        Profit        Date  Month Number Month Name  Year  \n",
+       "0   $21,040.50    $16,185.00   01/01/2021             1   January   2021  \n",
+       "1   $17,173.00    $13,210.00   01/01/2021             1   January   2021  \n",
+       "2   $28,314.00    $10,890.00   01/06/2021             6      June   2021  \n",
+       "3   $11,544.00     $4,440.00   01/06/2021             6      June   2021  \n",
+       "4   $32,110.00    $12,350.00   01/06/2021             6      June   2021  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('Coffee_company.csv')\n",
+    "print(data)\n",
+    "data.columns = data.columns.str.strip()\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Discount Band</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Manufacturing Price</th>\n",
+       "      <th>Sale Price</th>\n",
+       "      <th>Gross Sales</th>\n",
+       "      <th>Discounts</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month Number</th>\n",
+       "      <th>Month Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Units sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2427.75</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$21,040.50</td>\n",
+       "      <td>$16,185.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1981.50</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$17,173.00</td>\n",
+       "      <td>$13,210.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3267.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$28,314.00</td>\n",
+       "      <td>$10,890.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1332.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$11,544.00</td>\n",
+       "      <td>$4,440.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3705.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$32,110.00</td>\n",
+       "      <td>$12,350.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Segment                   Country    Product Discount Band  Units Sold  \\\n",
+       "0  Beverages  United States of America   Robusta          None      2427.75   \n",
+       "1  Beverages               Switzerland   Robusta          None      1981.50   \n",
+       "2     Snacks                     Japan   Robusta          None      3267.00   \n",
+       "3     Snacks               Switzerland   Robusta          None      1332.00   \n",
+       "4     Snacks                   Belgium   Robusta          None      3705.00   \n",
+       "\n",
+       "  Manufacturing Price Sale Price   Gross Sales Discounts         Sales  \\\n",
+       "0              $3.90     $26.00    $42,081.00      $-      $42,081.00    \n",
+       "1              $3.90     $26.00    $34,346.00      $-      $34,346.00    \n",
+       "2              $3.90     $19.50    $42,471.00      $-      $42,471.00    \n",
+       "3              $3.90     $19.50    $17,316.00      $-      $17,316.00    \n",
+       "4              $3.90     $19.50    $48,165.00      $-      $48,165.00    \n",
+       "\n",
+       "           COGS        Profit        Date  Month Number Month Name  Year  \\\n",
+       "0   $21,040.50    $16,185.00   01/01/2021             1   January   2021   \n",
+       "1   $17,173.00    $13,210.00   01/01/2021             1   January   2021   \n",
+       "2   $28,314.00    $10,890.00   01/06/2021             6      June   2021   \n",
+       "3   $11,544.00     $4,440.00   01/06/2021             6      June   2021   \n",
+       "4   $32,110.00    $12,350.00   01/06/2021             6      June   2021   \n",
+       "\n",
+       "   Units sold  \n",
+       "0        2427  \n",
+       "1        1981  \n",
+       "2        3267  \n",
+       "3        1332  \n",
+       "4        3705  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Units sold']= data['Units Sold'].astype(int)\n",
+    "data.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
