--- a/project 1.ipynb
+++ b/project 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4   $32,110.00    $12,350.00   01/06/2021             6      June   2021  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4        3705  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,11 +431,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Segment', 'Country', 'Product', 'Discount Band', 'Units Sold',\n",
+      "       'Manufacturing Price', 'Sale Price', 'Gross Sales', 'Discounts',\n",
+      "       'Sales', 'COGS', 'Profit', 'Date', 'Month Number', 'Month Name', 'Year',\n",
+      "       'Units sold'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Discount Band</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Manufacturing Price</th>\n",
+       "      <th>Sale Price</th>\n",
+       "      <th>Gross Sales</th>\n",
+       "      <th>Discounts</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month Number</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Units sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2427.75</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,081.00</td>\n",
+       "      <td>$21,040.50</td>\n",
+       "      <td>$16,185.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1981.50</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$26.00</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$34,346.00</td>\n",
+       "      <td>$17,173.00</td>\n",
+       "      <td>$13,210.00</td>\n",
+       "      <td>01/01/2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3267.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$42,471.00</td>\n",
+       "      <td>$28,314.00</td>\n",
+       "      <td>$10,890.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1332.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$17,316.00</td>\n",
+       "      <td>$11,544.00</td>\n",
+       "      <td>$4,440.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snacks</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Robusta</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3705.00</td>\n",
+       "      <td>$3.90</td>\n",
+       "      <td>$19.50</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$-</td>\n",
+       "      <td>$48,165.00</td>\n",
+       "      <td>$32,110.00</td>\n",
+       "      <td>$12,350.00</td>\n",
+       "      <td>01/06/2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Segment                   Country    Product Discount Band  Units Sold  \\\n",
+       "0  Beverages  United States of America   Robusta          None      2427.75   \n",
+       "1  Beverages               Switzerland   Robusta          None      1981.50   \n",
+       "2     Snacks                     Japan   Robusta          None      3267.00   \n",
+       "3     Snacks               Switzerland   Robusta          None      1332.00   \n",
+       "4     Snacks                   Belgium   Robusta          None      3705.00   \n",
+       "\n",
+       "  Manufacturing Price Sale Price   Gross Sales Discounts         Sales  \\\n",
+       "0              $3.90     $26.00    $42,081.00      $-      $42,081.00    \n",
+       "1              $3.90     $26.00    $34,346.00      $-      $34,346.00    \n",
+       "2              $3.90     $19.50    $42,471.00      $-      $42,471.00    \n",
+       "3              $3.90     $19.50    $17,316.00      $-      $17,316.00    \n",
+       "4              $3.90     $19.50    $48,165.00      $-      $48,165.00    \n",
+       "\n",
+       "           COGS        Profit        Date  Month Number      Month  Year  \\\n",
+       "0   $21,040.50    $16,185.00   01/01/2021             1   January   2021   \n",
+       "1   $17,173.00    $13,210.00   01/01/2021             1   January   2021   \n",
+       "2   $28,314.00    $10,890.00   01/06/2021             6      June   2021   \n",
+       "3   $11,544.00     $4,440.00   01/06/2021             6      June   2021   \n",
+       "4   $32,110.00    $12,350.00   01/06/2021             6      June   2021   \n",
+       "\n",
+       "   Units sold  \n",
+       "0        2427  \n",
+       "1        1981  \n",
+       "2        3267  \n",
+       "3        1332  \n",
+       "4        3705  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "print(data.columns)\n",
+    "data.rename(columns={'Month Name':'Month'}, inplace = True)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Segment                   Country    Product Discount Band  Units Sold  \\\n",
+      "0  Beverages  United States of America   Robusta          None      2427.75   \n",
+      "1  Beverages               Switzerland   Robusta          None      1981.50   \n",
+      "2     Snacks                     Japan   Robusta          None      3267.00   \n",
+      "3     Snacks               Switzerland   Robusta          None      1332.00   \n",
+      "4     Snacks                   Belgium   Robusta          None      3705.00   \n",
+      "\n",
+      "  Manufacturing Price Sale Price   Gross Sales Discounts    Sales  \\\n",
+      "0              $3.90     $26.00    $42,081.00      $-     42081.0   \n",
+      "1              $3.90     $26.00    $34,346.00      $-     34346.0   \n",
+      "2              $3.90     $19.50    $42,471.00      $-     42471.0   \n",
+      "3              $3.90     $19.50    $17,316.00      $-     17316.0   \n",
+      "4              $3.90     $19.50    $48,165.00      $-     48165.0   \n",
+      "\n",
+      "           COGS        Profit        Date  Month Number      Month  Year  \\\n",
+      "0   $21,040.50    $16,185.00   01/01/2021             1   January   2021   \n",
+      "1   $17,173.00    $13,210.00   01/01/2021             1   January   2021   \n",
+      "2   $28,314.00    $10,890.00   01/06/2021             6      June   2021   \n",
+      "3   $11,544.00     $4,440.00   01/06/2021             6      June   2021   \n",
+      "4   $32,110.00    $12,350.00   01/06/2021             6      June   2021   \n",
+      "\n",
+      "   Units sold  \n",
+      "0        2427  \n",
+      "1        1981  \n",
+      "2        3267  \n",
+      "3        1332  \n",
+      "4        3705  \n",
+      "Total Sales: $ 408015039.62999994\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['Sales'] = data['Sales'].astype(str).str.replace(',', '', regex=False).str.replace('$', '', regex=False)\n",
+    "\n",
+    "# Convert to numeric (handling errors by coercing invalid values to NaN)\n",
+    "data['Sales'] = pd.to_numeric(data['Sales'], errors='coerce')\n",
+    "\n",
+    "# Print first 5 rows for verification\n",
+    "print(data.head())\n",
+    "\n",
+    "# Calculate and print total sales\n",
+    "total_sales = data['Sales'].sum()\n",
+    "print(\"Total Sales: $\", total_sales)"
    ]
   }
  ],
